--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@iconify-json/bx": "^1.1.10",
+    "@nuxt/content": "^2.13.2",
+    "@nuxt/image": "^1.7.0",
+    "@nuxt/ui": "^2.18.3",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
-    "nuxt": "^3.9.0",
+    "nuxt": "^3.12.4",
     "nuxt-icon": "^0.6.8",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
