--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@iconify-json/bx": "^1.1.10",
+    "@iconify-json/uil": "^1.1.9",
     "@nuxt/content": "^2.13.2",
     "@nuxt/image": "^1.7.0",
     "@nuxt/ui": "^2.18.3",
