--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.12.4",
+    "nuxt-gtag": "^2.1.0",
     "nuxt-icon": "^0.6.8",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
