--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nuxt": "^3.12.4",
     "nuxt-gtag": "^2.1.0",
     "nuxt-icon": "^0.6.8",
+    "nuxt-mail": "^5.0.1",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "vue": "^3.4.3",
