--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "devDependencies": {
     "@iconify-json/bx": "^1.1.10",
+    "@iconify-json/jam": "^1.1.9",
+    "@iconify-json/line-md": "^1.1.39",
+    "@iconify-json/material-symbols": "^1.1.88",
     "@iconify-json/uil": "^1.1.9",
     "@nuxt/content": "^2.13.2",
     "@nuxt/image": "^1.7.0",
