--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxt/content": "^2.13.2",
     "@nuxt/image": "^1.7.0",
     "@nuxt/ui": "^2.18.3",
+    "@nuxtjs/seo": "^2.0.0-rc.18",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.12.4",
